k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppinglist
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: shoppinglist
  template:
    metadata:
      labels:
        app: shoppinglist
    spec:
      containers:
        - name: shoppinglist
          image: ghcr.io/kmjayadeep/shoppinglist-server:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "25m"
            limits:
              memory: "500Mi"
              cpu: "250m"
