k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppinglist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: default-clusterissuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - shoppinglist.cosmos.cboxlab.com
    secretName: shoppinglist-cert
  rules:
  - host: shoppinglist.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoppinglist
            port:
              number: 8080
